--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@pixi-spine/all-3.8": "^3.1.0",
+    "@pixi-spine/all-3.8": "3.1.2",
     "copy-to-clipboard": "^3.3.3",
-    "pixi.js": "^6.5.8",
+    "pixi.js": "6.4.2",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
